<resources>
    <string name="app_name">Food Market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_addres">Email Addres</string>
    <string name="type_your_email_address">Type your email address</string>
    <string name="password">Password</string>
    <string name="type_your_password">Type your password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="type_your_full_name">Type Your Full Name</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="type_your_city">Type Your City</string>
    <string name="city">City</string>
    <string name="type_your_house_number">Type Your House Number</string>
    <string name="house_number">House Number</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
</resources>