<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.SigninFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number" />

        <EditText
            android:layout_marginTop="6dp"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            android:layout_marginTop="6dp"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_email_address"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>


        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house_number"/>

        <EditText
            android:layout_marginTop="7dp"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_house_number"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"/>

        <EditText
            android:layout_marginTop="7dp"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_city"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <Button
            android:text="@string/sign_up_now"
            style="@style/Button.Primary"
            android:layout_marginTop="24dp"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="false"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>